# uefi-spec-rs

./: Cargo.toml  README.md
examples/: memory-allocation-services.rs  simple-text-input.rs  simple-text-output.rs
src/: errors.rs  global_data.rs  helpers.rs  lib.rs
src/boot_services/: image_services.rs  memory_allocation_services.rs  mod.rs
src/protocols/: mod.rs  simple_text_input.rs  simple_text_output.rs
