[package]
name = "uefi_spec"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = [
        "embedded",
        "hardware-support",
        "os",
]
readme = "README.md"
description = "UEFI API for use in std"

[dependencies]
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.0', optional = true }
r-efi = { path = "../../r-efi" }

[features]
# We feature-gate all examples, since they will not link correctly, unless you
# use a UEFI target configuration. To make `cargo test` work, we exclude all
# examples from normal runs.
examples = []
rustc-dep-of-std = ['core', 'compiler_builtins/rustc-dep-of-std']

